# digitalkyaapa

./: .gitignore  README.md
blockchain/: Cargo.toml  cargo_errors.txt
blockchain/src/: api.rs  blockchain.rs  main.rs  models.rs
webapp/: package-lock.json  package.json  tsconfig.tsbuildinfo
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/app/register/: page.tsx
webapp/src/app/search/: page.tsx
webapp/src/app/titles/[id]/: page.tsx
