[package]
name = "digitalkyapa-blockchain"
version = "0.1.0"
edition = "2021"
description = "Blockchain-based land title registry for Uganda"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
sled = "0.34"
bincode = "1.3"
